--- a/Assets/style.css
+++ b/Assets/style.css
@@ -6,8 +6,9 @@
 }
 
 h1 {
-    font-size: 4em;
+    font-size: 4rem;
     color: hotpink;
+
 }
 
 h2 {
@@ -37,9 +38,44 @@ button {
     cursor: pointer;
 }
 
+.flex-column {
+    display: flex;
+    flex-direction: column;
+}
+
+.flex-center {
+    justify-content: center;
+    align-items: center;
+}
+
+.justify-center {
+    justify-content: center;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.btn {
+    font-size: 2.4rem;
+    padding: 2rem 0;
+    width: 30rem;
+    text-align: center;
+    margin-bottom: 1rem;
+    color: rgb(236, 236, 236);
+    border-radius: 4px;
+}
+
+.btn:hover {
+    cursor: pointer;
+    box-shadow: 0 0.4rem 1.4rem 0 rgba(8, 114, 244, 0.6);
+    transition: transform 150ms;
+    transform: scale(1.03);
+}
+
 button:hover,
 #start-button:hover,
-#show-scores:hover,
+#highscore-btn:hover,
 #restart:hover,
 #submit-score:hover {
     transform: scale(1.1);
@@ -48,12 +84,16 @@ button:hover,
 
 #start-button,
 #restart,
-#show-scores,
+#highscore-btn,
 #submit-score {
     font-size: 1.33em;
     padding: 0.5em 1.8em;
     border-radius: 0.2em;
     box-shadow: 0 20px 30px rgba(0, 0, 0, 0.4);
+}
+.scorelist-container {
+    background-color: #0d2ccb;
+   
 }
 
 #restart {
@@ -150,10 +190,58 @@ button:hover,
 
 .score-list {
     margin: 0.3rem 0;
+
 }
 
-#highscorelist {
-    background-color: black;
-    color: #2fd358;
-    margin: 1rem 0;
+#highScoresList {
+    list-style: none;
+    margin-bottom: 4rem;
+}
+
+.highScores {
+    font-size: 2.8rem;
+    margin-bottom: 0.5rem;
+}
+
+#highscore-btn {
+    background-color: aliceblue;
+    margin: 0.5rem;
+}
+
+.end-form-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 30rem;
+}
+
+input {
+    margin-bottom: 1rem;
+    width: 20rem;
+    padding: 1.5rem;
+    font-size: 1.8rem;
+    border: none;
+    box-shadow: 0 0.1rem 1.4rem 0 rgba(86, 185, 235, 0.5);
+}
+
+input::placeholder {
+    color: #aaa;
+}
+
+#username {
+    margin-bottom: 3rem;
+    width: 100%;
+    outline: none;
+}
+
+#end-text {
+    font-size: 2.4rem;
+    color: #fff;
+    text-align: center;
+}
+
+#submit-score {
+    background-color: #fff;
+    border: none;
 }
